Aggiunti tooltip (sfasati)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
 
     // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:1.0.0"
+
+    //Tooltips
+    compile 'com.nhaarman.supertooltips:library:3.0.+'
 }
